syntax = "proto3";
package Fantasy.Network.Message;

/// 登录到服务器
message H_C2G_LoginRequest // IRequest,H_G2C_LoginResponse
{
	string UserName = 1; 	// 用户名
	string Password = 2;	// 密码
}
message H_G2C_LoginResponse // IResponse
{
	string Text = 1;
}